force-app/main/default/objects/Salesforce_Project__c/Salesforce_Project__c.object-meta.xml
<CustomObject>
    <description
  >Salesforce Project records for the Salesforce Portfolio app.</description>
    <label>Salesforce Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>