force-app/main/default/objects/Salesforce_Project__c/fields/Architecture__c.field-meta.xml
<CustomField>
    <fullName>Architecture__c</fullName>
    <label>Architecture</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>