force-app/main/default/objects/Salesforce_Project__c/fields/Cloud__c.field-meta.xml
<CustomField>
    <fullName>Cloud__c</fullName>
    <label>Cloud</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Experience Cloud</fullName>
            </value>
            <value>
                <fullName>Education Cloud</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>