force-app/main/default/objects/Salesforce_Project__c/fields/GitHub_Repository__c.field-meta.xml
<CustomField>
    <fullName>GitHub_Repository__c</fullName>
    <label>GitHub Repository</label>
    <type>Url</type>
</CustomField>