force-app/main/default/objects/Salesforce_Project__c/fields/Problem__c.field-meta.xml
<CustomField>
    <fullName>Problem__c</fullName>
    <label>Business Problem</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>