force-app/main/default/objects/Salesforce_Project__c/fields/Technologies__c.field-meta.xml
<CustomField>
    <fullName>Technologies__c</fullName>
    <label>Technologies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>