force-app/main/default/objects/Salesforce_Project__c/validationRules/Required_Links_When_Published.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Links_When_Published</fullName>
    <active>true</active>
    <description
  >Published projects need repository and demo links.</description>
    <errorConditionFormula
  >ISPICKVAL(Status__c, "Published") &amp;&amp; (ISBLANK(GitHub_Repository__c) || ISBLANK(Demo_URL__c))</errorConditionFormula>
    <errorDisplayField>GitHub_Repository__c</errorDisplayField>
    <errorMessage
  >Published projects must have a GitHub repository URL and a demo URL.</errorMessage>
</ValidationRule>