force-app/main/default/objects/Salesforce_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Cloud__c</columns>
        <columns>Published_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Salesforce Projects</label>
</ListView>