force-app/main/default/objects/Salesforce_Project__c/listViews/Published.listView-meta.xml
<ListView>
    <fullName>Published</fullName>
    <columns>NAME</columns>
    <columns>Cloud__c</columns>
    <columns>Published_Date__c</columns>
    <columns>GitHub_Repository__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Published</value>
    </filters>
    <label>Published</label>
</ListView>